src/test/deca/context/invalid/personalTests/TypeIncompatible2.deca
// Erreur de typage


{
    int x = "Hello"; // Erreur : type incompatible.
}